[package]
name = "macro_state"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A set of macros allowing storing and loading global state at compile-time within proc macros."
repository = "https://github.com/sam0x17/macro_state"
readme = "README.md"

[lib]
path = "src/macro_state.rs"

[dependencies]
macro_state_macros = { path = "./macros", version = "0.1.6" }
lazy_static = "1.4.0"
