[package]
name = "macro_state_macros"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/sam0x17/macro_state"
description = "Support crate for macro_state containing proc macros"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/macros.rs"

[dependencies]
